tests/agl/rejections/type/inference_rigid_ask_target.agl
def fetch[T](prompt: text) -> T = ask::[T](prompt)
fetch::[int]("Give an integer.")
